# trunkver

./: Cargo.toml  README.md  action.yml  build.rs  rust-toolchain
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: Build.yml  Release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
src/: lib.rs
