[package]
name = "trunkver"
version = "0.1.1"
repository = "https://github.com/urothis/trunkver"
description = "A CLI for generating trunk version numbers"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true

[dependencies]
clap = { version = "4", features = ["derive"] }
trunkver-lib = { path = "../lib" }
